<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_yellow"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hiUser"
        style="@style/TitleText"
        android:text="@string/hello_user"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/testInstruction1"
        style="@style/InstructionText"
        android:layout_below="@id/hiUser"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="0dp"
        android:text="@string/TextInstruction1" />

    <TextView
        android:id="@+id/testInstruction2"
        style="@style/InstructionText"
        android:layout_below="@id/testInstruction1"
        android:text="@string/TextInstruction2" />

    <TextView
        android:id="@+id/testInstruction3"
        style="@style/InstructionText"
        android:layout_below="@id/testInstruction2"
        android:text="@string/TextInstruction3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        style="@style/AppMaterialButtonNext"
        android:text="@string/buttonNext" />

</RelativeLayout>