<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_yellow">

    <TextView
        android:id="@+id/textView"
        style="@style/TitleText"
        android:text="@string/DefoltImage" />

    <ImageView
        android:id="@+id/instruction2"
        android:layout_width="400dp"
        android:layout_height="480dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="74dp"
        android:contentDescription="@string/ImageInstruction" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/returnButton"
            style="@style/AppMaterialButtonBar"
            android:layout_width="0dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/buttonReturn1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startButton"
            style="@style/AppMaterialButtonBar"
            android:layout_width="0dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/Start" />
    </LinearLayout>

</RelativeLayout>
