<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_yellow">

    <TextView
        android:id="@+id/textView"
        style="@style/TitleText"
        android:text="@string/ResultImage" />

    <ImageView
        android:id="@+id/instructionNew"
        android:layout_width="378dp"
        android:layout_height="363dp"
        android:layout_below="@id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:contentDescription="@string/ImageInstruction" />

    <TextView
        android:id="@+id/resultText"
        style="@style/TitleText"
        android:layout_width="314dp"
        android:layout_height="106dp"
        android:layout_below="@id/instructionNew"
        android:layout_marginTop="500dp"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/returnButton"
            style="@style/AppMaterialButtonBar"
            android:layout_width="0dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/buttonReturn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton4"
            style="@style/AppMaterialButtonBar"
            android:layout_width="0dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/HistoryTitle" />
    </LinearLayout>

</RelativeLayout>
