<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4D621">

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/angkor"
        android:gravity="center"
        android:text="@string/HistoryTitle"
        android:textColor="#762AB0"
        android:textSize="40sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/buttonContainer"
        android:layout_below="@id/history"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />


    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/angkor"
            android:text="@string/BackToSelect"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/returnButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/angkor"
            android:text="@string/buttonReturn"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>